<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) SYSTAP, LLC 2006-2015.  All rights reserved.

Contact:
     SYSTAP, LLC
     2501 Calvert ST NW #106
     Washington, DC 20008
     licenses@systap.com

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; version 2 of the License.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

Copyright 2010 by TalkingTrends (Amsterdam, The Netherlands)
--><!-- 
This POM is intended to support the use of bigdata(R) as an embedded
database as part of your own maven project.  It declares the
dependencies for the embedded database, but does not include the
dependencies for the NanoSparqlServer or the clustered database - use
the ant build.xml file to generate and deploy those artifacts.

To install the dependencies into your local maven repository, do:

        mvn clean install
        
If you change any of the dependencies that are published by the bigdata
project (whether because we maintain them or because they are not readily
available) then you need to publish the updated dependencies to the maven
repository.  There are commands in comment blocks in this POM that will
deploy those dependencies.  Be sure to update the version numbers in the
commands first!

See https://sourceforge.net/apps/mediawiki/bigdata/index.php?title=ReleaseGuide
for information on publishing maven releases and snapshots for bigdata and its
dependencies.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.blazegraph</groupId>
   <artifactId>blazegraph-parent</artifactId>
   <version>1.5.3-master-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Blazegraph Database Platform</name>
    <description>Blazegraph™ is our ultra high-performance graph database supporting Blueprints and RDF/SPARQL APIs. It supports up to 50 Billion edges on a single machine and has a High Availability and Scale-out architecture. It is in production use for Fortune 500 customers such as EMC, Autodesk, and many others.</description>
    <url>http://www.blazegraph.com/</url>
    <organization>
        <name>SYSTAP, LLC</name>
        <url>http://www.systap.com/</url>
    </organization>
    <inceptionYear>2006</inceptionYear>
    <licenses>
        <license>
            <name>GNU General Public License Version 2 (GPLv2)</name>
            <url>http://www.gnu.org/licenses/gpl-2.0.html</url>
        </license>
    </licenses>
    <properties>
      <!--                                                            -->
      <!-- Note: Dependency versions are declared in build.properties -->
      <!-- This is a copy of that information. However, there are a   -->
      <!-- few subtle differences.  See build.properties for details. -->
      <!--                                                            -->
      <icu.version>4.8</icu.version>
      <zookeeper.version>3.4.5</zookeeper.version>
      <sesame.version>2.7.12</sesame.version>
      <slf4j.version>1.6.1</slf4j.version>
      <jetty.version>9.2.3.v20140905</jetty.version>
      <servlet.version>3.1.0</servlet.version>
      <lucene.version>3.0.0</lucene.version>
      <apache.commons_codec.version>1.4</apache.commons_codec.version>
      <apache.commons_configuration.version>1.10</apache.commons_configuration.version>
      <apache.commons_fileupload.version>1.3.1</apache.commons_fileupload.version>
      <apache.commons_io.version>2.1</apache.commons_io.version>
      <apache.commons_logging.version>1.1.1</apache.commons_logging.version>
      <apache.httpclient.version>4.1.3</apache.httpclient.version>
      <apache.httpclient_cache.version>4.1.3</apache.httpclient_cache.version>
      <apache.httpcore.version>4.1.4</apache.httpcore.version>
      <apache.httpmime.version>4.1.3</apache.httpmime.version>
      <highscalelib.version>1.1.2</highscalelib.version>
      <log4j.version>1.2.17</log4j.version>
      <colt.version>1.2.0</colt.version>
      <fastutil.version>6.5.16</fastutil.version>
      <dsiutils.version>1.0.10</dsiutils.version>
      <lgplutils.version>1.0.7-270114</lgplutils.version>
      <bigdata.ganglia.version>1.0.4</bigdata.ganglia.version>
      <jackson.version>2.2.3</jackson.version>
      <blueprints.version>2.5.0</blueprints.version>
      <jettison.version>1.3.3</jettison.version>
      <rexster.version>2.5.0</rexster.version>
      <striterator.version>1.0</striterator.version>
      <jini.version>2.2.1</jini.version>
      <!-- <junit-ext.version>1.1-b3-dev</junit-ext.version> -->
      <junit-ext.version>${project.version}</junit-ext.version>
      <junit4.version>4.11</junit4.version>
      <junit3.version>3.8.1</junit3.version>
      <servlet.version>3.1.0</servlet.version>
      <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <scm>
      <connection>scm:git:https://github.com/SYSTAP/bigdata.git</connection>
    </scm>
    <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
	  <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-war-plugin</artifactId>
       <version>2.6</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <includes>
            <include>**/TestAll.java</include>
          </includes>
          <excludes>
            <exclude>com/bigdata/TestAll.java</exclude>
          </excludes>
          <forkCount>1</forkCount>
          <reuseForks>true</reuseForks>
	  <printSummary>false</printSummary>
          <disableXmlReport>false</disableXmlReport>
          <argLine>-server -ea -Xms512m -Xmx8g -XX:+UseMembar -XX:MaxPermSize=500m -Djavadoc=true -Djava.net.preferIPv4Stack=${java.net.preferIPv4Stack}</argLine>
        </configuration>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh-external</artifactId>
         <version>1.0-beta-6</version>
      </extension>
    </extensions>
    </build>
    
    <distributionManagement>
        <repository>
            <id>bigdata.releases</id>
            <name>bigdata(R) releases</name>
            <url>scpexe://www.systap.com/srv/www/htdocs/systap.com/maven/releases</url>
        </repository>
        <snapshotRepository>
            <id>bigdata.snapshots</id>
            <name>bigdata(R) snapshots</name>
            <url>scpexe://www.systap.com/srv/www/htdocs/systap.com/maven/snapshots</url>
            <uniqueVersion>true</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
    
   <repositories>
    <repository>
      <id>bigdata.releases</id>
      <url>http://www.systap.com/maven/releases/</url>
    </repository>
    <repository>
      <id>bigdata.snapshots</id>
      <url>http://www.systap.com/maven/snapshots/</url>
    </repository>
    <!-- 
    <repository>
      <id>jetty.releases</id>
      <url>https://oss.sonatype.org/content/groups/jetty/</url>
    </repository>
    -->
  </repositories>

  <modules>
    <module>../junit-ext</module>
    <module>../ctc-striterators</module>
    <module>../lgpl-utils</module>
    <module>../dsi-utils</module>
    <module>../rdf-properties</module>
    <module>../bigdata-util</module>
    <module>../bigdata-client</module>
    <module>../bigdata-ganglia</module>
    <module>../bigdata-gas</module>
    <module>../bigdata-core/</module>
<!--
	Temporarily remove to CI purposes
    <module>../bigdata-jini</module>
-->
    <module>../bigdata-war-html</module>
    <module>../bigdata-war</module>
    <module>../bigdata-blueprints</module>
    <module>../bigdata-jar</module>
    <module>../bigdata-runtime</module>
    <module>../bigdata-core-test/</module>
    <module>../bigdata-rdf-test/</module>
    <module>../bigdata-sails-test/</module>
  </modules>


</project>
